--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Jekyll configuration
 
-name: 0xWukong Blerg about that sweet hacking shit.
+name: 0xWukong's Blerg about that sweet hacking shit.
 description: I'm a noob take my writing lightly. Hopefull you learn something. 
 
 # Url is currently only used only for the RSS feed in feed.xml
