trying to fix the stupid shit and too lazy to spin a dev server up on my box so just commiting the shit outta stuff

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: http://gr0zz.github.io/blog
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
-baseurl: '/'
+baseurl: '/blog'
 
 author: gr0zz
 copyright: 2077
